jilles      2005/10/12 10:16:33 UTC	(20051012-2851)
  Log:
  Avoid kicking any services on /cs clear users, not just chanserv.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/clear_users.c (File Modified) 


pfish       2005/10/12 09:49:01 UTC	(20051012-2849)
  Log:
  bugfix
  

  Changes:	Modified:
  +2 -1		trunk/modules/chanserv/clear_users.c (File Modified) 


nenolod     2005/10/11 22:17:11 UTC	(20051011-2847)
  Log:
  Unbreak. >_<.
  

  Changes:	Modified:
  +4 -3		trunk/configure (File Modified) 
  +1 -2		trunk/modules/memoserv/Makefile.in (File Modified) 


kog         2005/10/11 12:45:45 UTC	(20051011-2845)
  Log:
  added help dir for helpserv
  

  Changes:	Modified:
  + -		trunk/help/helpserv/ (File Added) 


kog         2005/10/11 12:44:34 UTC	(20051011-2843)
  Log:
  added version tracking... forgot to set
  
  

  Changes:	Modified:
  + -		trunk/modules/helpserv/Makefile.in  (Property Modified)
  + -		trunk/modules/helpserv/help.c  (Property Modified)
  + -		trunk/modules/helpserv/main.c  (Property Modified)


kog         2005/10/11 12:42:06 UTC	(20051011-2841)
  Log:
  initial helpserv commit - Kog
  

  Changes:	Modified:
  + -		trunk/modules/helpserv/ (File Added) 
  +58 -0	trunk/modules/helpserv/Makefile.in (File Added) 
  +101 -0	trunk/modules/helpserv/help.c (File Added) 
  +121 -0	trunk/modules/helpserv/main.c (File Added) 


kog         2005/10/11 12:35:07 UTC	(20051011-2839)
  Log:
  helpserv skeleton add (requested by Kuja) 
  

  Changes:	Modified:
  +1 -0		trunk/configure.ac (File Modified) 
  +38 -0	trunk/dist/example.conf (File Modified) 
  +37 -0	trunk/dist/example.userserv.conf (File Modified) 
  +1 -0		trunk/include/account.h (File Modified) 
  +20 -10	trunk/include/services.h (File Modified) 
  +1 -1		trunk/modules/Makefile.in (File Modified) 
  +61 -0	trunk/src/conf.c (File Modified) 


kog         2005/10/11 07:53:30 UTC	(20051011-2837)
  Log:
  removed comments from top that didn't need to be there
  

  Changes:	Modified: